benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/debug/bignum_ModExp_DivMod_Zeroes_iter3_error.log
=== Verification Error - Iteration 3 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignum_ModExp_DivMod_Zeroes.rs
Time: 2025-09-15 20:25:20

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_DivMod_Zeroes_impl.rs:57:27
   |
57 |     let mut result: nat = 1;
   |                     ---   ^ expected `nat`, found integer
   |                     |
   |                     expected due to this

error[E0277]: the trait bound `std::iter::Rev<std::slice::Iter<'_, char>>: vstd::pervasive::ForLoopGhostIteratorNew` is not satisfied
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_DivMod_Zeroes_impl.rs:58:5
   |
58 | /     for &y_bit in sy.iter().rev() {
59 | |         if y_bit == '1' {
60 | |             result = (result * base) % mod_val;
...  |
63 | |     }
   | |_____^ the trait `vstd::pervasive::ForLoopGhostIteratorNew` is not implemented for `std::iter::Rev<std::slice::Iter<'_, char>>`
   |
   = help: the following other types implement trait `vstd::pervasive::ForLoopGhostIteratorNew`:
             std::collections::hash_map::Iter<'a, Key, Value>
             std::collections::hash_map::Keys<'a, Key, Value>
             std::collections::hash_map::Values<'a, Key, Value>
             std::collections::hash_set::Iter<'a, Key>
             std::collections::vec_deque::Iter<'a, T>
             std::ops::Range<A>
             std::slice::Iter<'a, T>
             std::str::Chars<'a>
             std::vec::IntoIter<T, A>

error[E0277]: the trait bound `std::iter::Rev<std::slice::Iter<'_, char>>: vstd::pervasive::ForLoopGhostIteratorNew` is not satisfied
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_DivMod_Zeroes_impl.rs:58:19
   |
58 |     for &y_bit in sy.iter().rev() {
   |                   ^^^^^^^^^^^^^^^ the trait `vstd::pervasive::ForLoopGhostIteratorNew` is not implemented for `std::iter::Rev<std::slice::Iter<'_, char>>`
   |
   = help: the following other types implement trait `vstd::pervasive::ForLoopGhostIteratorNew`:
             std::collections::hash_map::Iter<'a, Key, Value>
             std::collections::hash_map::Keys<'a, Key, Value>
             std::collections::hash_map::Values<'a, Key, Value>
             std::collections::hash_set::Iter<'a, Key>
             std::collections::vec_deque::Iter<'a, T>
             std::ops::Range<A>
             std::slice::Iter<'a, T>
             std::str::Chars<'a>
             std::vec::IntoIter<T, A>

error[E0599]: no function or associated item named `from_seq` found for struct `std::vec::Vec<_, _>` in the current scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_DivMod_Zeroes_impl.rs:65:17
   |
65 |     return Vec::from_seq(res_seq);
   |                 ^^^^^^^^ function or associated item not found in `Vec<_, _>`
   |
note: if you're trying to build a new `std::vec::Vec<_, _>` consider using one of the following associated functions:
      std::vec::Vec::<T>::new
      std::vec::Vec::<T>::with_capacity
      std::vec::Vec::<T>::try_with_capacity
      std::vec::Vec::<T>::from_raw_parts
      and 6 others
  --> /rustc/6b00bc3880198600130e1cf62b8f8a93494488cc/library/alloc/src/vec/mod.rs:434:5
help: there is an associated function `from` with a similar name
   |
65 -     return Vec::from_seq(res_seq);
65 +     return Vec::from(res_seq);
   |

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0277, E0308, E0599.
For more information about an error, try `rustc --explain E0277`.

--------------------------------------------------------------------------------

Additional Output:
error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_DivMod_Zeroes_impl.rs:57:27
   |
57 |     let mut result: nat = 1;
   |                     ---   ^ expected `nat`, found integer
   |                     |
   |                     expected due to this

error[E0277]: the trait bound `std::iter::Rev<std::slice::Iter<'_, char>>: vstd::pervasive::ForLoopGhostIteratorNew` is not satisfied
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_DivMod_Zeroes_impl.rs:58:5
   |
58 | /     for &y_bit in sy.iter().rev() {
59 | |         if y_bit == '1' {
60 | |             result = (result * base) % mod_val;
...  |
63 | |     }
   | |_____^ the trait `vstd::pervasive::ForLoopGhostIteratorNew` is not implemented for `std::iter::Rev<std::slice::Iter<'_, char>>`
   |
   = help: the following other types implement trait `vstd::pervasive::ForLoopGhostIteratorNew`:
             std::collections::hash_map::Iter<'a, Key, Value>
             std::collections::hash_map::Keys<'a, Key, Value>
             std::collections::hash_map::Values<'a, Key, Value>
             std::collections::hash_set::Iter<'a, Key>
             std::collections::vec_deque::Iter<'a, T>
             std::ops::Range<A>
             std::slice::Iter<'a, T>
             std::str::Chars<'a>
             std::vec::IntoIter<T, A>

error[E0277]: the trait bound `std::iter::Rev<std::slice::Iter<'_, char>>: vstd::pervasive::ForLoopGhostIteratorNew` is not satisfied
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_DivMod_Zeroes_impl.rs:58:19
   |
58 |     for &y_bit in sy.iter().rev() {
   |                   ^^^^^^^^^^^^^^^ the trait `vstd::pervasive::ForLoopGhostIteratorNew` is not implemented for `std::iter::Rev<std::slice::Iter<'_, char>>`
   |
   = help: the following other types implement trait `vstd::pervasive::ForLoopGhostIteratorNew`:
             std::collections::hash_map::Iter<'a, Key, Value>
             std::collections::hash_map::Keys<'a, Key, Value>
             std::collections::hash_map::Values<'a, Key, Value>
             std::collections::hash_set::Iter<'a, Key>
             std::collections::vec_deque::Iter<'a, T>
             std::ops::Range<A>
             std::slice::Iter<'a, T>
             std::str::Chars<'a>
             std::vec::IntoIter<T, A>

error[E0599]: no function or associated item named `from_seq` found for struct `std::vec::Vec<_, _>` in the current scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_DivMod_Zeroes_impl.rs:65:17
   |
65 |     return Vec::from_seq(res_seq);
   |                 ^^^^^^^^ function or associated item not found in `Vec<_, _>`
   |
note: if you're trying to build a new `std::vec::Vec<_, _>` consider using one of the following associated functions:
      std::vec::Vec::<T>::new
      std::vec::Vec::<T>::with_capacity
      std::vec::Vec::<T>::try_with_capacity
      std::vec::Vec::<T>::from_raw_parts
      and 6 others
  --> /rustc/6b00bc3880198600130e1cf62b8f8a93494488cc/library/alloc/src/vec/mod.rs:434:5
help: there is an associated function `from` with a similar name
   |
65 -     return Vec::from_seq(res_seq);
65 +     return Vec::from(res_seq);
   |

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0277, E0308, E0599.
For more information about an error, try `rustc --explain E0277`.
